updated readme file
